--- a/source/sass/elements/_figure.scss
+++ b/source/sass/elements/_figure.scss
@@ -1,11 +1,9 @@
 
-figure
-{
+figure{
     overflow: hidden;
     width: 100%;
 
-    figcaption
-    {
+    figcaption{
         text-align: left;
         position: absolute;
         left: 0;
